# proga

balabanova_k_a/: bpm_22_1_1.cpp  bpm_22_1_2.cpp  bpm_22_1_3.cpp
balabanova_k_a/codeforces/: 0004a.cpp  0058a.cpp  0069a.cpp  0071a.cpp  0122a.cpp  0136a  0136a.cpp  0136b.cpp  0263a.cpp  0271a.cpp  0276.cpp  0485a.cpp  0579a.cpp  0584a.cpp  0617a.cpp  0879b.cpp  0886b.cpp  0915a.cpp  0935b.cpp  0967b.cpp  0978a.cpp  1017a.cpp  1030a.cpp  1100c.cpp  1165b.cpp  1330a.cpp  1335a.cpp  1352a.cpp  1501a.cpp  1512a.cpp  1512b.cpp  1512c.cpp  1559a.cpp  1585a.cpp  1649a  1649a.cpp  1661a.cpp  1669d.cpp  1670b.cpp  1671a.cpp  (+10 more)
balabanova_k_a/homew/: hw-05-01.cpp  hw-05-02.cpp  hw-05-03.cpp
balabanova_k_a/vector/: CMakeLists.txt  CMakeProject.cpp  CMakeProject.hpp  ballistika.cpp  cat_mouse.cpp
